syntax = "proto3";

package stella.rental.v1;

service RentalService {
  rpc GetResourceStatus(GetResourceStatusRequest) returns (ResourceStatus) {}
  rpc RentResource(RentResourceRequest) returns (ResourceStatus) {}
  rpc ReturnResource(ReturnResourceRequest) returns (ResourceStatus) {}
  rpc ReserveResource(ReserveResourceRequest) returns (ResourceStatus) {}
  rpc CancelResource(CancelResourceRequest) returns (ResourceStatus) {}
}

message ResourceStatus {
  int64 entity_id = 1;
  enum Availability {
    AVAILABLE = 0;
    UNAVAILABLE = 1;
  }
  Availability availability = 2;
  repeated int64 reserved_user_ids = 3;
}

message GetResourceStatusRequest {
  int64 entity_id = 1;
}

message RentResourceRequest {
  int64 entity_id = 1;
  int64 user_id = 2;
}

message ReturnResourceRequest {
  int64 entity_id = 1;
  int64 user_id = 2;
}

message ReserveResourceRequest {
  int64 entity_id = 1;
  int64 user_id = 2;
}

message CancelResourceRequest {
  int64 entity_id = 1;
  int64 user_id = 2;
}
